tests/ui/recv-borrow-endpoint-alias.stderr
error[E0499]: cannot borrow `*endpoint` as mutable more than once at a time
  --> tests/ui/recv-borrow-endpoint-alias.rs:44:23
   |
43 |         futures::executor::block_on(endpoint.recv::<g::Msg<7, FramePayload>>()).unwrap();
   |                                     -------- first mutable borrow occurs here
44 |     let _flow_again = endpoint.flow::<g::Msg<8, u8>>().unwrap();
   |                       ^^^^^^^^ second mutable borrow occurs here
45 |     let _ = payload;
   |             ------- first borrow later used here
